fix(css): prevent layout breaking at small viewport

--- a/practice-two/src/styles/components/button.css
+++ b/practice-two/src/styles/components/button.css
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 
-@media (width >= 768px) {
+@media (min-width: 768px) {
   .btn-link {
     padding: 12.5px 34.5px;
   }
